crates/toml_edit/tests/fixtures/invalid/string/multiline-no-close-2.stderr
TOML parse error at line 1, column 7
  |
1 | x="""
  |       ^
Invalid multiline basic string
